--- a/CatAppSharp/CatAppSharp.csproj
+++ b/CatAppSharp/CatAppSharp.csproj
@@ -11,13 +11,16 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Rest\" />
+    <None Remove="Adapter\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Rest\" />
+    <Folder Include="Adapter\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Refit" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Square.Picasso" Version="2.71828.0" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.3.1.1" />
   </ItemGroup>
 </Project>
